# glassmorphism-calculator

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: CONTRIBUTING.md
src/: __init__.py  calculator.py
tests/: test_calculator.py
