[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glassmorphism-calculator"
version = "1.0.0"
description = "A sleek glassmorphism calculator built with PyQt6"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "PyQt6>=6.4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/glassmorphism-calculator"
Issues = "https://github.com/yourusername/glassmorphism-calculator/issues"

[tool.setuptools.packages.find]
where = ["src"]
